Fix for #62 - Misaligned checkbox and radio button within form-horizontal class.

--- a/app/modules/elements/assets/sass/_form-controls.scss
+++ b/app/modules/elements/assets/sass/_form-controls.scss
@@ -128,7 +128,10 @@
   padding-left: 10px;
 }
 
-
+// for case when the controls are used in a form-horizontal class
+.form-horizontal .radio, .form-horizontal .checkbox, .form-horizontal .radio-inline, .form-horizontal .checkbox-inline {
+  padding-top: 0;
+}
 
 .controls-inline .control {
   display: inline;
